fix: update html markup

--- a/index.html
+++ b/index.html
@@ -4,18 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CV&#35;2.HTML,CSS&#38;GIT</title>
-    <link href="style.css" type="text/css" rel="stylesheet"/>
+    <title>CV&num;2.HTML,CSS&amp;GIT</title>
+    <link href="style.css" type="text/css" rel="stylesheet">
 </head>
 <body>
-    <div class="header"><img src="image.jpg" width="350" height="400">
+<div class="header"><img src="image.jpg" title="portrait" alt="there is my portrait" width="350" height="400">
 <div class="introduction"><h1>Katsiaryna Prakopchyk</h1>
 <h2>Junior Frontend Developer</h2>
 <hr>
 <h2>Contact information:</h2>
+<ul>
 <li><b>Phone:</b> +48516509354</li>
 <li><b>Email:</b> prokopchike@gmail.com</li>
 <li><b>Address:</b> 00-844, Poland, Warsaw, Grzybowska, 63-7</li>
+</ul>
 </div></div>
 <div class="content">
 <h2>Skills:</h2>
@@ -25,7 +27,7 @@
 </ul>
 <h2>Courses:</h2>
 <ul>
-<li>IT-Academy "Website development with HTML, CSS & Javascript" (completed)</li>  
+<li>IT-Academy "Website development with HTML, CSS &amp; Javascript" (completed)</li>  
 <li>RS School "JavaScript/Front-end. Stage 0" (in progress)</li> 
 </ul>
 <h2>Languages:</h2>
