fix: html format

--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
       <h2 id="aboutme">About me</h2>
       <p>I'm Kate. I'm Belarusian, living in Warsaw. In Belarus I'd been succeed in Economics. This year I've
         decided to broaden out my technical skills. I've been studing Front-End for last eight monthes now and
-        can say that I like it.</p>
+        can say that I like it.
+      </p>
       <h2 id="skills">Skills:</h2>
       <ul>
         <li>HTML5</li>
